# AvSystemTask

./: CMakeLists.txt  README  README.md
src/: avst_utils.c  avst_utils.h  connectivity_object.c  connectivity_object.h  dconfig  device_object.c  device_object.h  main.c  temperature_object.c  temperature_object.h
src/html/: annotated.html  avst__utils_8c_source.html  avst__utils_8h.html  avst__utils_8h_source.html  classes.html  connectivity__object_8c_source.html  connectivity__object_8h_source.html  device__object_8c_source.html  device__object_8h.html  device__object_8h_source.html  files.html  globals.html  globals_enum.html  globals_func.html  index.html  main_8c.html  main_8c_source.html  structavailable__network__bearer__instance-members.html  structavailable__network__bearer__instance.html  structconnectivity__monitoring__object__struct-members.html  structconnectivity__monitoring__object__struct.html  structdevice__object__struct-members.html  structdevice__object__struct.html  structerror__code__instance-members.html  structerror__code__instance.html  structip__address__instance-members.html  structip__address__instance.html  structtemperature__instance__struct-members.html  structtemperature__instance__struct.html  structtemperature__object__struct-members.html  structtemperature__object__struct.html  structtime__instance__struct-members.html  structtime__instance__struct.html  structtime__object__struct-members.html  structtime__object__struct.html  temperature__object_8c_source.html  temperature__object_8h.html  temperature__object_8h_source.html  (+2 more)
(+33 files in other folders)
